<resources>

    <string name="app_name">Schedule Generator</string>
    <string name="generate">Generate</string>
    <string name="schedule_gen">Generated Schedules</string>

    <!-- Generic -->
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <!-- MainFragment -->
    <string name="label_course_list">Class List</string>
    <string name="label_primary">Essential Courses:</string>
    <string name="label_secondary">Secondary Courses:</string>
    <string name="btn_generate">GENERATE!</string>
    <string name="add_section">Add Class</string>
    <string name="prefix_section">Sect:</string>

    <!-- SettingsFragment -->
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="btn_add">Add Class</string>
    <string name="label_max_gap">Max Break Hours: </string>
    <string name="label_days">Max days a week: </string>
    <string name="label_max_class">Max Classes a Day: </string>
    <string name="label_max_credit">Max Total Credit:</string>
    <string name="label_min_credit">Min Total Credit:</string>
    <string name="set">set</string>

    <!-- AddClassFragment -->
    <string name="label_course">Course</string>
    <string name="course_priorty">Priority</string>
    <string name="course_hint">BIO101</string>
    <string name="rb_essential">Essential</string>
    <string name="rb_secondary">Secondary</string>
    <string name="label_credit">Credits</string>

    <string-array name="priority">
        <item>Essential</item>
        <item>Secondary</item>
    </string-array>

    <string name="label_section">Section Info:</string>
    <string name="instructor">Instructor</string>
    <string name="location">Location</string>
    <string name="section_time">Time:</string>
    <string name="section_id">Section</string>
    <string name="section_id_hint">ie: 02</string>
    <string name="class_code">Class Code</string>
    <string name="class_code_hint">ie: 25762</string>
    <string name="start_from">From: </string>
    <string name="ends_at">To: </string>

    <string name="monday">M</string>
    <string name="tuesday">TU</string>
    <string name="wednesday">W</string>
    <string name="thursday">TH</string>
    <string name="friday">F</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="start_time_default">12:00 AM</string>
    <string name="end_time_default">12:00 AM</string>

    <!-- Schedule List -->
    <string name="label_total_credits">"Total Credits: "</string>
    <string name="label_max_break_time">"Max Gaps: "</string>
</resources>
