<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$SettingsFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            >

            <!-- Max Break Hours -->
            <TextView
                android:id="@+id/label_max_break"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_max_gap"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <SeekBar
                android:id="@+id/seekBar_max_gap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="24"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <!-- Days off -->
            <TextView
                android:id="@+id/label_days_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_days"
                android:textAppearance="?android:attr/textAppearanceLarge"/>


            <SeekBar
                android:id="@+id/seekBar_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="6"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>


            <!-- Max Class Per Day -->
            <TextView
                android:id="@+id/label_class_per_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_max_class"
                android:textAppearance="?android:attr/textAppearanceLarge"/>


            <SeekBar
                android:id="@+id/seekBar_class_per_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="9"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>


            <!-- MIN CREDIT -->
            <TextView
                android:id="@+id/label_min_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_min_credit"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <SeekBar
                android:id="@+id/seekBar_min_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="23"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <!-- MAX CREDIT -->
            <TextView
                android:id="@+id/label_max_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_max_credit"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <SeekBar
                android:id="@+id/seekBar_max_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="23"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>



        </LinearLayout>
    </ScrollView>

    <!--    <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:layout_alignParentBottom="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_centerHorizontal="true"
            android:onClick="saveSettings"
            />-->
</RelativeLayout>
